# hello-aws-sdk

./: CMakeLists.txt  README.md  hello-aws-sdk.cpp  hello-aws-sdk.vcxproj  hello-aws-sdk.vcxproj.filters  install_cmake.sh
